# task-sphere

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
todo_app/: alembic.ini  database.py  main.py  pyproject.toml  rate_limiter.py
todo_app/alembic/: env.py
todo_app/alembic/versions/: 5abb52233c92_initial_empty_migration.py  6392e01e6765_initial_migration.py  91dd72c8a820_create_users_and_todos_tables.py
todo_app/routers/: admin.py  auth.py  todos.py  users.py
todo_app/test/: test_auth.py  test_example.py  test_health.py  test_main.py  test_pagination.py  utils.py
